--- a/StructureMobile.html
+++ b/StructureMobile.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
         /* Init */
         body {
@@ -55,6 +56,11 @@
         div {
             border: 1px solid purple;
         }
+
+
+        .menu-wrap {
+            transition: 0.5s all ease-out;
+        }
     </style>
     <title>Document</title>
 </head>
@@ -62,18 +68,41 @@
 <body>
     <div class="header">
         <div>
-            <div class="hamburger-menu-icon">🍔</div>
+            <div type="checkbox" class="hamburger-menu-icon">🍔</div>
         </div>
 
         <div class="searchContainer">
             <div class="searchbar">Search Me</div>
         </div>
-
     </div>
     <div class="main">
         <div class="task-lists"></div>
         <div class="input-area"></div>
     </div>
-</body>
 
+
+    <style>
+        .fade {
+            background: coral;
+            transform:translate3d(-100%, 0px, 0px)
+        }
+    </style>
+    <input type="checkbox" name="" id="toggler">
+    <div class="menu-wrap">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Settings</a></li>
+        </ul>
+    </div>
+</body>
+<script>
+    $("#toggler").click(() => {
+        if ($("#toggler").prop("checked")) {
+            $(".menu-wrap").addClass("fade");
+        }else {
+            $(".menu-wrap").removeClass("fade")
+        }
+    })
+</script>
 </html>
