--- a/plainHTML/hamburger-menu-icon.html
+++ b/plainHTML/hamburger-menu-icon.html
@@ -72,6 +72,7 @@
             justify-content: space-evenly;
             flex-direction: column;
 
+            cursor: pointer;
         }
 
         label::before, label::after {
