--- a/plainHTML/hamburger-menu-icon.html
+++ b/plainHTML/hamburger-menu-icon.html
@@ -54,16 +54,16 @@
             /* Material Guidlines */
             --hamburger-icon-height: 48px;
             --hamburger-icon-width: 48px;
-            --hamburger-line-width: 48px;
-            --hamburger-line-height: 10px;
-            --hamburger-line-radius: 10px;
-            --hamburger-line-color: #202020;
-            --hamburger-lines-margin: 10px;
+            --hamburger-line-width: 38px;
+            --hamburger-line-height: 7px;
+            --hamburger-line-radius: 3px;
+            --hamburger-line-color: #e1e1e1;
+            --hamburger-lines-margin: 6px;
         }
 
 
         label {
-            position: absolute;
+            position: relative;
             height: var(--hamburger-icon-height);
             width: var(--hamburger-icon-width);
 
@@ -72,7 +72,6 @@
             justify-content: space-evenly;
             flex-direction: column;
 
-            cursor: pointer;
         }
 
         label::before, label::after {
@@ -84,22 +83,21 @@
             position: absolute;
         }
         label::after {
-            top: 19px;
             margin-top: var(--hamburger-lines-margin);
         }
         label::before {
-            top: 19px;
             margin-top: calc(-1 * var(--hamburger-lines-margin));
         }
         
         /* Hide Checkbox */
         .visually-hidden {
+            display: none;
             opacity: 0;
         }
 
         /* Animating on checked */
         label::before, label::after {
-            transition: .5s all ease;
+            transition: .5s all ease, .1s margin ease;
         }
         #toggle:checked ~ label::after, #toggle:checked ~ label::before {
             margin: 0;
