--- a/plainHTML/divider.html
+++ b/plainHTML/divider.html
@@ -32,16 +32,24 @@
             font-size: 20px;
         }
 
+        /* display */
+        div:not([class]) {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+        }
+
         /* Divider */
         .divider {
-            border-color: rgb(225, 225, 225, 0.3);
-            border-width: 2px;
+            border-color: var(--divider-color);
+            border-width: var(--divider-border-width);
             width: 100%;
             border-style: solid;
-            border-radius: 5px;
+            border-radius: var(--divider-radius);
         }
         .half {
-            width: 69%!important;
+            width: var(--divider-half-width)!important;
         }
         
 
@@ -49,16 +57,20 @@
         /* Divider Shadowed */
         .shadow-divider {
             width: 100%;
-            height: 2px;
-            box-shadow: inset 0px 0px 2px #e1e1e1;
+            height: var(--divider-border-width);
+            box-shadow: inset 0px 0px 2px var(--divider-shadow-color);
         }
 
-        /* display */
-        div:not([class]) {
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            align-items: center;
+        /* Variable Declarations (Dynamics) */
+        :root {
+            --divider-border-width: 2px;
+            --divider-half-width: 69%;
+            --divider-color: rgb(225, 225, 225, 0.3);
+            --divider-radius: 5px;
+
+
+            --divider-shadow-blur-radius: 2px;
+            --divider-shadow-color: rgb(255, 255, 255, 0.3);
         }
     </style>
 </head>
