wrote some Todo's

--- a/International Imamreza University /src/public/index.html
+++ b/International Imamreza University /src/public/index.html
@@ -11,7 +11,20 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animation.css">
 </head>
-
+<!-- 
+    TODO: connect api 
+        TODO: connect tasks
+            TODO: get all tasks that has a categoryId of ... or categoryTitle of ... (Load)
+            TODO: when inserting a task create that task into database(Create)
+            TODO: on checked/favourite/rename update task (Update)
+            TODO: on delete (Delete)
+        TODO: connect categories
+            TODO: get all catxegories and show them in sidebar (Load)
+            TODO: adding category (Create)
+            TODO: on rename update task (Update)
+            ANCHOR: [Feature] on checked/favourite category (Update)
+            TODO: on delete (Delete)
+-->
 <body ng-app="myApp" ng-controller="myCtrl">
     <section class="container">
         <header>Today</header>
