dividing task ctrlr from category ctrlr

--- a/International Imamreza University /src/public/index.html
+++ b/International Imamreza University /src/public/index.html
@@ -27,6 +27,7 @@
 -->
 <body ng-app="myApp" ng-controller="myCtrl">
     <section class="container">
+    <section class="container" ng-controller="taskCtrlr">
         <header>Today</header>
         <main class="tasks">
             <section class="task animate-repeat"
