Adding todo's - dividing JS files

--- a/International Imamreza University /src/public/index.html
+++ b/International Imamreza University /src/public/index.html
@@ -19,7 +19,7 @@
             TODO: on checked/favourite/rename update task (Update)
             TODO: on delete (Delete)
         TODO: connect categories
-            TODO: get all catxegories and show them in sidebar (Load)
+            TODO: get all categories and show them in sidebar (Load)
             TODO: adding category (Create)
             ANCHOR: [Feature] on rename update task (Update)
             ANCHOR: [Feature] on checked/favourite category (Update)
@@ -111,3 +111,5 @@
 
 </html>
 <script src="app.js"></script>
+<script src="categoryCtrlr.js"></script>
+<script src="crud.js"></script>
