--- a/International Imamreza University /src/public/index.html
+++ b/International Imamreza University /src/public/index.html
@@ -31,7 +31,9 @@
         TODO: Adding Form
             TODO: add button
             TODO: input bark
+            TODO: Validation (Before submit)
 -->
+
 <body ng-app="myApp">
     <sidebar ng-controller="categoryCtrlr">
         <header>
@@ -54,6 +56,25 @@
                 </section>
             </section>
         </main>
+
+        <footer>
+            <form name="categoryForm" class="input" ng-submit="submit($event)">
+                <input type="text" name="newCatTitle" ng-model="newCategoryName" placeholder="New Project Title"
+                    autofocus>
+                    <!-- TODO: debounce, ng-model-options -->
+                <button action="POST" type="submit">
+                    <section class="iconTouchTarget" ng-click="" title="Add">
+                        <svg width="24" height="24">
+                            <g transform="translate(-278 -11)" fill="none" fill-rule="evenodd">
+                                <path id="searchSvg"
+                                    d="M301.674 31.75L297 27.077a1.124 1.124 0 00-.797-.329h-.764a9.7 9.7 0 002.062-5.999c0-5.385-4.364-9.749-9.75-9.749-5.387 0-9.751 4.364-9.751 9.749 0 5.385 4.364 9.75 9.75 9.75a9.704 9.704 0 006.001-2.063v.764c0 .3.117.586.328.797l4.674 4.673c.44.44 1.153.44 1.59 0l1.326-1.327c.44-.44.44-1.153.005-1.593zm-13.923-5.002c-3.315 0-6-2.68-6-5.999 0-3.314 2.68-6 6-6 3.314 0 6 2.682 6 6 0 3.314-2.681 6-6 6z"
+                                    fill-rule="nonzero" />
+                            </g>
+                        </svg>
+                    </section>
+                </button>
+            </form>
+        </footer>
 
     </sidebar>
     <section class="container" ng-controller="taskCtrlr">
