misplaced taskCtrlr in a wrong 📁 [fix prev commit]

--- a/International Imamreza University /src/public/index.html
+++ b/International Imamreza University /src/public/index.html
@@ -131,3 +131,4 @@
 <script src="crud.js"></script>
 <script src="app.js"></script>
 <script src="categoryCtrlr.js"></script>
+<script src="taskCtrlr.js"></script>
