--- a/International Imamreza University /src/public/task.html
+++ b/International Imamreza University /src/public/task.html
@@ -3,9 +3,8 @@
         <section class="task animate-repeat"
             ng-repeat="task in taskLists | orderBy: 'checked' : true | filter: searchTerm">
             <section class="center">
-                <section class="iconTouchTarget" ng-click="task.checked = !(task.checked); save()">
-                    <input type="checkbox" id="" ng-model="task.checked" ng-change="save()"
-                        ng-click="stopPropagation($event)">
+                <section class="iconTouchTarget" ng-click="update(task.taskId, {checked: task.checked})">
+                    <input type="checkbox" id="" ng-model="task.checked">
                 </section>
                 <label style="text-decoration: {{ task.checked ? 'line-through;' : 'none'}}"
                     ng-click="changeTaskName(task.title, task.$$hashKey); changeAppState(1);">{{ task.title }}</label>
