--- a/International Imamreza University /src/public/index.html
+++ b/International Imamreza University /src/public/index.html
@@ -7,8 +7,7 @@
     <title>Sketched Simple Todo</title>
     <script src="libs/angular.js"></script>
     <script src="libs/angular-animate.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
-    <!-- TODO: offload libraries -->
+    <script src="libs/angular-route.js"></script>
     <script src="iosToolbarHeight.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animation.css">
