--- a/International Imamreza University /src/public/index.html
+++ b/International Imamreza University /src/public/index.html
@@ -25,23 +25,25 @@
         TODO: category list
         TODO: Adding Form
             TODO: add button
-            TODO: input bark
+            TODO: input bar
             TODO: Validation (Before submit)
 -->
 
 <body ng-app="myApp">
     <sidebar class="container" ng-controller="categoryCtrlr">
         <header>
-            <h1> {{ sideBarHeader }} </h1>
+            <h1 class="text_center"> {{ sideBarHeader }} </h1>
         </header>
 
         <main class="tasks">
             <section class="task animate-repeat" ng-repeat="category in categories">
                 <section class="center">
-                    <section class="iconTouchTarget" ng-click="update(category.categoryId, {checked: category.checked})">
+                    <section class="iconTouchTarget"
+                        ng-click="update(category.categoryId, {checked: category.checked})">
                         <input type="checkbox" id="" ng-model="category.checked">
                     </section>
-                    <label style="text-decoration: {{ category.checked ? 'line-through;' : 'none'}}" ng-click="navigateTo(category)">{{ category.title }}</label>
+                    <label style="text-decoration: {{ category.checked ? 'line-through;' : 'none'}}"
+                        ng-click="navigateTo(category)">{{ category.title }}</label>
                 </section>
                 <section class="iconTouchTarget" ng-click="delete($index ,category.categoryId);">
                     <svg width="19" height="22" xmlns="http://www.w3.org/2000/svg">
@@ -57,14 +59,12 @@
                 <input type="text" name="newCatTitle" ng-model="newCategoryName" placeholder="New Project Title"
                     autofocus>
                 <!-- TODO: debounce, ng-model-options -> to check for unique column validation -> how about removing titles being unique column -->
-                <button action="POST" type="submit">
+                <button class="no_border trans_backg" action="POST" type="submit">
                     <section class="iconTouchTarget" ng-click="" title="Add">
-                        <svg width="24" height="24">
-                            <g transform="translate(-278 -11)" fill="none" fill-rule="evenodd">
-                                <path id="searchSvg"
-                                    d="M301.674 31.75L297 27.077a1.124 1.124 0 00-.797-.329h-.764a9.7 9.7 0 002.062-5.999c0-5.385-4.364-9.749-9.75-9.749-5.387 0-9.751 4.364-9.751 9.749 0 5.385 4.364 9.75 9.75 9.75a9.704 9.704 0 006.001-2.063v.764c0 .3.117.586.328.797l4.674 4.673c.44.44 1.153.44 1.59 0l1.326-1.327c.44-.44.44-1.153.005-1.593zm-13.923-5.002c-3.315 0-6-2.68-6-5.999 0-3.314 2.68-6 6-6 3.314 0 6 2.682 6 6 0 3.314-2.681 6-6 6z"
-                                    fill-rule="nonzero" />
-                            </g>
+                        <svg class="animate-switch" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                            <path id="searchSvg"
+                                d="M22.286 9.429H14.57V1.714C14.571.768 13.804 0 12.857 0h-1.714c-.947 0-1.714.768-1.714 1.714V9.43H1.714C.768 9.429 0 10.196 0 11.143v1.714c0 .947.768 1.714 1.714 1.714H9.43v7.715c0 .946.767 1.714 1.714 1.714h1.714c.947 0 1.714-.768 1.714-1.714V14.57h7.715c.946 0 1.714-.767 1.714-1.714v-1.714c0-.947-.768-1.714-1.714-1.714z"
+                                fill="#888" fill-rule="nonzero" />
                         </svg>
                     </section>
                 </button>
@@ -72,8 +72,7 @@
         </footer>
 
     </sidebar>
-    <a href="/task"></a>
-    <div class="container" ng-view></section>
+    <div class="container" ng-view>
 </body>
 
 </html>
